--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.1",
     "dotenv": "^16.3.1",
     "matrix-bot-sdk": "^0.7.0"
   },
